--- a/views/header.ejs
+++ b/views/header.ejs
@@ -74,6 +74,22 @@
       font-size: 1.5em;
       font-family: 'Comic Sans MS';
     }
+
+    #user-avatar {
+      position: fixed;
+      top: 20px;
+      left: 30px;
+      width: 100px;
+      height: 140px;
+      border-radius: 50%;
+      overflow: hidden;
+      border: 2px solid black;
+    }
+    #user-avatar img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   </style>
 
   <nav>
@@ -109,4 +125,11 @@
       <a href="/login.ejs" class="button-common">Login</a>
     <% } %>
   </div>
+  
+  <% if (user && user.avatar) { %>
+    <div id="user-avatar">
+      <img src="/pictures/<%= user.avatar %>" alt="User Avatar">
+    </div>
+  <% } %>
+
 </header>
