--- a/views/css/resourceCss.ejs
+++ b/views/css/resourceCss.ejs
@@ -65,33 +65,6 @@ header nav a:hover {
   margin-bottom: 1rem;
 }
 
-/* Zip code input container */
-.zip-input-container {
-  margin-bottom: 1rem;
-  text-align: center;
-}
-
-.zip-input-container label {
-  margin-right: 0.5rem;
-}
-
-.zip-input-container input {
-  padding: 0.5rem;
-  margin-right: 0.5rem;
-}
-
-.zip-input-container button {
-  padding: 0.5rem;
-  background-color: rgb(107, 73, 219);
-  color: white;
-  border: none;
-  cursor: pointer;
-}
-
-.zip-input-container button:hover {
-  background-color: rgb(200, 160, 300);
-}
-
 /* FAQ section */
 #faq h4 {
   cursor: pointer;
@@ -115,11 +88,6 @@ header nav a:hover {
 
 /* Responsive design */
 @media (max-width: 768px) {
-  /* Adjust map height for smaller devices */
-  .map {
-    height: 200px;
-  }
-
   .zip-input-container button {
     margin-top: 15px;
   }
@@ -138,7 +106,7 @@ header nav a:hover {
 }
 
 #search-container {
-  text-align: center; /* Or align as needed */
+  text-align: center;
   margin-bottom: 20px;
 }
 
@@ -163,5 +131,53 @@ header nav a:hover {
   background-color: #009ddf;
 }
 
+/* Map */
+.sidebar {
+  width: 33.3333%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  border-right: 1px solid rgb(0 0 0 / 25%);
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+}
 
+#map {  
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  top: 0; 
+  bottom: 0; 
+  width: 100%; 
+}
+
+/* Marker tweaks */
+.mapboxgl-popup-close-button {
+  display: none;
+}
+
+/* Style Popups */ 
+.mapboxgl-popup-content {
+  font: 400 15px/22px 'Source Sans Pro', 'Helvetica Neue', sans-serif;
+  padding: 0;
+  width: 180px;
+}
+
+.mapboxgl-popup-content h3 {
+  background: #91c949;
+  color: #fff;
+  margin: 0;
+  padding: 10px;
+  border-radius: 3px 3px 0 0;
+  font-weight: 700;
+  margin-top: -15px;
+}
+
+.mapboxgl-popup-content h4 {
+  margin: 0;
+  padding: 10px;
+  font-weight: 400;
+}
 </style>
