--- a/views/header.ejs
+++ b/views/header.ejs
@@ -90,6 +90,33 @@
       height: 100%;
       object-fit: cover;
     }
+
+    /* Search bar */
+    #search-container {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    #searchBar {
+      padding: 10px;
+      margin-right: 10px;
+      font-size: 1em;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+    }
+
+    #search-container button {
+      padding: 10px 15px;
+      background-color: #00bfff;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    #search-container button:hover {
+      background-color: #009ddf;
+    }
   </style>
 
   <nav>
@@ -137,6 +164,9 @@
     </div>
   <% } %>
   
+  <!--Search Bar-->
+  <%- include('partial/search') %>
+      <script src="/js/search.js"></script>
 
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
