--- a/views/createEmployeeAccount.ejs
+++ b/views/createEmployeeAccount.ejs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%- include('css/indexCss'); %>
+  <%- include('css/employeeCreateAccountCss.ejs'); %>
   <title>Blank's Veterinary Clinic - Employee Account</title>
 </head>
 <body id="body">
