Fixed a couple lines of code in search.ejs

--- a/views/partial/search.ejs
+++ b/views/partial/search.ejs
@@ -1,8 +1,8 @@
 <!-- search.ejs -->
 <div id="search-container">
     <input type="text" id="searchBar" placeholder="Search..." aria-label="Search">
-    <button onclick="searchContent()">Search</button>
-    <button onclick="clearSearch()">Clear</button>
+    <button onclick="javascript:searchContent();">Search</button>
+    <button onclick="javascript:clearSearch();">Clear</button>
 
   </div>
   <div id="searchResults"></div>
