--- a/views/header.ejs
+++ b/views/header.ejs
@@ -165,7 +165,7 @@
   <% } %>
   
   <!--Search Bar-->
-  <%- include('partial/search') %>
+  <%- include('partial/search') ;%>
       <script src="/js/search.js"></script>
 
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
