--- a/views/resources.ejs
+++ b/views/resources.ejs
@@ -126,7 +126,7 @@
     </div>
     -->
     <div class="map-container">
-      <div id="map" style='width: 800px; height: 500px;'></div>
+      <div id="map"></div>
     </div>
   </div>
   <br>
