[Finishes #186621472, #186621462] Reworked internal search for website.

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -164,8 +164,11 @@
     </div>
   <% } %>
   
-  <!--Search Bar-->
+  <!--Old Search Bar-->
   <%- include('partial/search') ;%>
+
+  <!-- New Search Bar using API -->
+  <script async src="https://js.sitesearch360.com/plugin/bundle/49580.js"></script>
   
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
