--- a/views/partial/search.ejs
+++ b/views/partial/search.ejs
@@ -69,11 +69,11 @@
       });
     }
   </script>
-
-  <input type="text" id="searchBar" placeholder="Search..." aria-label="Search">
-  <button onclick="javascript:searchContent();">Search</button>
-  <button onclick="javascript:clearSearch();">Clear</button>
-
+    <!--
+    <input type="text" id="searchBar" >
+    <button onclick="javascript:searchContent();">Search</button>
+    <button onclick="javascript:clearSearch();">Clear</button> 
+    -->
 </div>
-<div id="searchResults"></div>
+
   
