Made minor adjustments to index & WW styles for consistency.

--- a/views/css/wwCss.ejs
+++ b/views/css/wwCss.ejs
@@ -1,31 +1,42 @@
 <style>
-form {
-  width: fit-content;
-  border: 2px black solid;
-  margin: auto;
-  text-align:start;
-  padding: 10px;
-}
+  /* Main content area */
+  #main {
+    padding: 1rem;
+    max-width: 1200px;
+    margin: 20px auto; 
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1); 
+    background: #fff; 
+    border-radius: 5px;
+  }
+  
+  form {
+    width: fit-content;
+    border: 2px black solid;
+    margin: auto;
+    text-align:start;
+    padding: 10px;
+  }
 
-form label, form select{
-  margin-bottom: 10px;
-}
+  form label, form select{
+    margin-bottom: 10px;
+  }
 
-form input{
-  width: 225px;
-  margin-bottom: 10px;
-}
+  form input{
+    width: 225px;
+    margin-bottom: 10px;
+  }
 
-#submit{
-  width: auto;
-  margin-left: 80%;
-}
+  #submit{
+    width: auto;
+    margin-left: 80%;
+  }
 
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
- form input{
-  width: 180px;
- } 
-}
+  /* Extra small devices (phones, 600px and down) */
+  @media only screen and (max-width: 600px) {
+  form input{
+    width: 180px;
+  } 
+  }
 
 </style>
