--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,8 @@
 
   <%- include('header'); %>
 
+  <div id="main">
+    
   <% if (typeof message !== 'undefined') { %>
     <p><%= message %></p>
   <% } %>
@@ -37,7 +39,7 @@
     </div>
   </section>
   <br>
-
+  </div>
   <%- include('footer'); %>
   
 </body>
