--- a/views/css/indexCss.ejs
+++ b/views/css/indexCss.ejs
@@ -8,6 +8,17 @@ body{
   font-family: 'Comic Sans MS';
 }
 
+/* Main content area */
+#main {
+    padding: 1rem;
+    max-width: 1200px;
+    margin: 20px auto; 
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1); 
+    background: #fff; 
+    border-radius: 5px;
+  }
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   img {
