--- a/views/createAccount.ejs
+++ b/views/createAccount.ejs
@@ -25,7 +25,7 @@
         <input type="text" id="email" name="email"><br>
 
         <label for="password">Password:</label><br>
-        <input type="text" id="password" name="password"><br>
+        <input type="password" id="password" name="password"><br>
 
         <button type="submit">Create Account</button>
       </form>
