Commented out unused eventListener.

--- a/views/partial/search.ejs
+++ b/views/partial/search.ejs
@@ -35,7 +35,7 @@
       searchContent();
     }, 250);
 
-    document.getElementById('searchBar').addEventListener('input', debouncedSearch);
+    // document.getElementById('searchBar').addEventListener('input', debouncedSearch);
 
     function clearSearch() {
       document.getElementById('searchBar').value = '';
