--- a/views/header.ejs
+++ b/views/header.ejs
@@ -76,15 +76,24 @@
     }
 
     #user-avatar {
-      position: fixed;
+      position: absolute;
       top: 20px;
       left: 30px;
       width: 100px;
-      height: 140px;
+      height: 120px;
       border-radius: 50%;
       overflow: hidden;
       border: 2px solid black;
     }
+  @media screen and (max-width: 850px) {
+  #user-avatar {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100px;
+    height: 120px;
+  }
+}
     #user-avatar img {
       width: 100%;
       height: 100%;
